--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,7 +15,7 @@
     </style>
 
     <style name="AppTheme.SubTitle">
-        <item name="android:textSize">21sp</item>
+        <item name="android:textSize">26sp</item>
     </style>
 
     <style name="AppTheme.Button">
@@ -34,6 +34,18 @@
         <item name="android:paddingRight">@dimen/margin_small</item>
         <item name="android:paddingTop">@dimen/margin_small</item>
         <item name="android:textColorHint">@color/black</item>
+    </style>
+
+    <style name="AppTheme.TimeProgress" parent="android:Widget.ProgressBar.Horizontal">
+        <item name="android:indeterminateOnly">false</item>
+        <item name="android:layout_height">@dimen/progress_question_height</item>
+        <item name="android:progressDrawable">@drawable/time_progress</item>
+    </style>
+
+    <style name="AppTheme.QuestionProgress">
+        <item name="android:indeterminateOnly">false</item>
+        <item name="android:layout_height">@dimen/progress_question_height</item>
+        <item name="android:progressDrawable">@drawable/question_progress</item>
     </style>
 
 </resources>
