--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="margin_small">10dp</dimen>
     <dimen name="margin_medium">20dp</dimen>
     <dimen name="rounded_radius">4dp</dimen>
+    <dimen name="margin_big">40dp</dimen>
+    <dimen name="progress_question_height">40dp</dimen>
 </resources>
