--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -6,14 +6,57 @@
               android:orientation="vertical">
 
     <TextView
-        android:id="@+id/scoreText"
+        style="@style/AppTheme.Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="9/10"/>
+        android:layout_margin="@dimen/margin_medium"
+        android:gravity="center"
+        android:text="@string/title_congrats"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/scoreText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_small"
+            android:textColor="@color/primary"
+            android:textSize="72sp"
+            tools:text="9"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/text_pts"
+            android:textColor="@color/primary"/>
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/scoreTotalText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/text_score"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginBottom="@dimen/margin_medium"
+        android:layout_marginLeft="@dimen/margin_medium"
+        android:layout_marginRight="@dimen/margin_medium"
+        android:layout_marginTop="@dimen/margin_medium"
+        android:background="@color/grey2"/>
 
     <ListView
         android:id="@+id/resultListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"/>
 
 </LinearLayout>
