--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,12 @@
         <item name="android:textSize">32sp</item>
     </style>
 
+    <style name="AppTheme.Title">
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textSize">28sp</item>
+        <item name="android:textColor">@color/primary</item>
+    </style>
+
     <style name="AppTheme.SubTitle">
         <item name="android:textSize">26sp</item>
     </style>
@@ -46,6 +52,19 @@
         <item name="android:indeterminateOnly">false</item>
         <item name="android:layout_height">@dimen/progress_question_height</item>
         <item name="android:progressDrawable">@drawable/question_progress</item>
+    </style>
+
+    <style name="AppTheme.TextQuestion">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="AppTheme.TextAnswer">
+
+    </style>
+
+    <style name="AppTheme.TextAnswerCorrect">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/green</item>
     </style>
 
 </resources>
