--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -7,138 +7,150 @@
 
     <include layout="@layout/view_nav_bar"/>
 
-    <ScrollView
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <ProgressBar
+            android:id="@+id/progress"
+            android:layout_width="@dimen/progress_size"
+            android:layout_height="@dimen/progress_size"
+            android:layout_gravity="center"/>
+
+        <ScrollView
+            android:id="@+id/formScrollView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <TextView
-                style="@style/AppTheme.SubTitle"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_medium"
-                android:layout_marginLeft="@dimen/margin_small"
-                android:layout_marginRight="@dimen/margin_small"
-                android:layout_marginTop="@dimen/margin_medium"
-                android:text="@string/text_form"/>
+                android:orientation="vertical">
 
-            <android.support.design.widget.TextInputLayout
-                style="@style/AppTheme.TextInputLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_small">
-
-                <EditText
-                    android:id="@+id/firstnameText"
+                <TextView
+                    style="@style/AppTheme.SubTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:hint="@string/hint_firstname"
-                    android:inputType="text|textCapWords"/>
-            </android.support.design.widget.TextInputLayout>
+                    android:layout_marginBottom="@dimen/margin_medium"
+                    android:layout_marginLeft="@dimen/margin_small"
+                    android:layout_marginRight="@dimen/margin_small"
+                    android:layout_marginTop="@dimen/margin_medium"
+                    android:text="@string/text_form"/>
 
-            <android.support.design.widget.TextInputLayout
-                style="@style/AppTheme.TextInputLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_small">
-
-                <EditText
-                    android:id="@+id/nameText"
+                <android.support.design.widget.TextInputLayout
+                    style="@style/AppTheme.TextInputLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:hint="@string/hint_name"
-                    android:inputType="text|textCapWords"/>
-            </android.support.design.widget.TextInputLayout>
+                    android:layout_margin="@dimen/margin_small">
 
-            <android.support.design.widget.TextInputLayout
-                style="@style/AppTheme.TextInputLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_small">
+                    <EditText
+                        android:id="@+id/firstnameText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
+                        android:hint="@string/hint_firstname"
+                        android:inputType="text|textCapWords"/>
+                </android.support.design.widget.TextInputLayout>
 
-                <EditText
-                    android:id="@+id/emailText"
+                <android.support.design.widget.TextInputLayout
+                    style="@style/AppTheme.TextInputLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:hint="@string/hint_email"
-                    android:inputType="textEmailAddress"/>
-            </android.support.design.widget.TextInputLayout>
+                    android:layout_margin="@dimen/margin_small">
 
-            <android.support.design.widget.TextInputLayout
-                style="@style/AppTheme.TextInputLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_small">
+                    <EditText
+                        android:id="@+id/nameText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
+                        android:hint="@string/hint_name"
+                        android:inputType="text|textCapWords"/>
+                </android.support.design.widget.TextInputLayout>
 
-                <EditText
-                    android:id="@+id/phoneText"
+                <android.support.design.widget.TextInputLayout
+                    style="@style/AppTheme.TextInputLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:hint="@string/hint_phone"
-                    android:inputType="phone"/>
-            </android.support.design.widget.TextInputLayout>
+                    android:layout_margin="@dimen/margin_small">
 
-            <android.support.design.widget.TextInputLayout
-                style="@style/AppTheme.TextInputLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_small">
+                    <EditText
+                        android:id="@+id/emailText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
+                        android:hint="@string/hint_email"
+                        android:inputType="textEmailAddress"/>
+                </android.support.design.widget.TextInputLayout>
 
-                <EditText
-                    android:id="@+id/postcodeText"
+                <android.support.design.widget.TextInputLayout
+                    style="@style/AppTheme.TextInputLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:hint="@string/hint_postcode"
-                    android:inputType="number"/>
-            </android.support.design.widget.TextInputLayout>
+                    android:layout_margin="@dimen/margin_small">
 
-            <android.support.design.widget.TextInputLayout
-                style="@style/AppTheme.TextInputLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_small">
+                    <EditText
+                        android:id="@+id/phoneText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
+                        android:hint="@string/hint_phone"
+                        android:inputType="phone"/>
+                </android.support.design.widget.TextInputLayout>
 
-                <EditText
-                    android:id="@+id/yearText"
+                <android.support.design.widget.TextInputLayout
+                    style="@style/AppTheme.TextInputLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:hint="@string/hint_year"
-                    android:inputType="number"/>
-            </android.support.design.widget.TextInputLayout>
+                    android:layout_margin="@dimen/margin_small">
 
-            <android.support.design.widget.TextInputLayout
-                style="@style/AppTheme.TextInputLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_small">
+                    <EditText
+                        android:id="@+id/postcodeText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
+                        android:hint="@string/hint_postcode"
+                        android:inputType="number"/>
+                </android.support.design.widget.TextInputLayout>
 
-                <EditText
-                    android:id="@+id/jobText"
+                <android.support.design.widget.TextInputLayout
+                    style="@style/AppTheme.TextInputLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/transparent"
-                    android:hint="@string/hint_job"
-                    android:inputType="text|textCapWords"/>
-            </android.support.design.widget.TextInputLayout>
+                    android:layout_margin="@dimen/margin_small">
 
-            <Button
-                android:id="@+id/submitButton"
-                style="@style/AppTheme.Button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="@dimen/margin_small"
-                android:text="@string/label_continue"/>
-        </LinearLayout>
-    </ScrollView>
+                    <EditText
+                        android:id="@+id/yearText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
+                        android:hint="@string/hint_year"
+                        android:inputType="number"/>
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    style="@style/AppTheme.TextInputLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/margin_small">
+
+                    <EditText
+                        android:id="@+id/jobText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
+                        android:hint="@string/hint_job"
+                        android:inputType="text|textCapWords"/>
+                </android.support.design.widget.TextInputLayout>
+
+                <Button
+                    android:id="@+id/submitButton"
+                    style="@style/AppTheme.Button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="@dimen/margin_small"
+                    android:text="@string/label_continue"/>
+            </LinearLayout>
+        </ScrollView>
+    </FrameLayout>
 </LinearLayout>
