--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,5 @@
     <dimen name="margin_medium">20dp</dimen>
     <dimen name="rounded_radius">4dp</dimen>
     <dimen name="margin_big">40dp</dimen>
-    <dimen name="progress_question_height">40dp</dimen>
+    <dimen name="progress_size">50dp</dimen>
 </resources>
